Add log files and update LR model

--- a/logistic_reg.ipynb
+++ b/logistic_reg.ipynb
@@ -794,7 +794,7 @@
     "    results.append((*row[1].tolist(), cv_mean_cost, C, coeffs))\n",
     "    \n",
     "    # sklearn warnings cannot be suppressed when n_jobs > 1, thus, write results to text file to monitor runs\n",
-    "    with open(r'./logs/log.txt', mode='a') as f:\n",
+    "    with open(r'./logs/log_lr.txt', mode='a') as f:\n",
     "        f.write('Results for Run #%i: Cost = %i, C = %i\\n' % (i+1, cv_mean_cost, C))\n",
     "\n",
     "# Create results dataframe\n",
